cluster/k8s/browsertrix/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: browsertrix
  namespace: browsertrix
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - archive.allegedly.works
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      timeouts:
        request: 300s
        backendRequest: 300s
      backendRefs:
        - name: browsertrix-cloud-backend
          port: 8000
    - timeouts:
        request: 3600s
        backendRequest: 3600s
      backendRefs:
        - name: browsertrix-cloud-frontend
          port: 80
